@@ -1,8 +1,10 @@
-$Id: ChangeLog 4323 2016-05-31 20:41:16Z chrfranke $
+$Id: ChangeLog 4324 2016-05-31 20:45:50Z chrfranke $
 
 2016-05-31  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
+	- Intel 311/313 Series SSDs: mSATA, *H (HP) variant
+	- Intel 520 Series SSDs: *L (Lenovo) variant
 	- HGST Ultrastar He6/He8: attribute 22 "Helium_Level"
 	- Western Digital Red: 8TB, attribute 22 "Helium_Level"
 	- USB: WD My Passport Ultra (0x1058:0x0837) (ticket #696)
